--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,7 @@ $dark-red: #490406;
 	float: right;
 	padding: 15px 2% 0;
 	position: relative;
-	z-index: 110000;
+	z-index: 1110000;
 }
 
 
